-修复了嵌体怪之眼不会显示宝箱中的道具信息的BUG。

12.3.4-2022.12.7
-Eye of Chimera now will show whether the item is a mod item.
-嵌体怪之眼现在会显示道具是否是MOD道具。
-The following items now have No Cantrip tag:
*Book of Years, Tengu Camera, Bucket of Wisp, Green Eyed Envy, Psycho Knife
*Tengu Cellphone, D Flip, Rune Cape, Vicious Curse, Fetus Blood
*Gambling D6, Yamawaro's Crate, Fox in Tube, Daitengu Telescope, Exchange Ticket
*Curse of Centipede, D Siphon
-以下道具获得了非大量过牌标签：
*岁月史书、天狗相机、鬼火桶、绿眼的嫉妒、疯人刀
*天狗手机、镜像骰子、符文披风、恶毒的诅咒、胎儿之血
*赌博六面骰、山童的木箱、管中狐、大天狗望远镜、交易所门票
*百足的诅咒、虹吸骰子

12.4.0-2022.12.14
-Added Deja vu.
-添加了似曾相识。
-Added shockwave effects for Destruction meteor, Daitengu Telescope, Wild Fury, Oni Horn and Brutal Horseshoe.
-为毁灭的陨石，大天狗望远镜，野性狂暴，鬼之角，残暴马蹄铁添加了震荡波效果。

12.4.1-2022.12.15
-Spirit Cannon now is one-time usage for lost.
-气功炮现在对游魂一次性使用。
-Fairy Dust now +1 luck up.
-妖精尘现在会+1运气。
-Fixed an issue that Deja vu only spawn up to 3 collectibles in a run.
-修复了似曾相识在一局中只会生成3个道具的BUG。

12.4.2-2022.12.15
-Supports CuerLib 1.2.0.
-适配CuerLib1.2.0.

12.4.3-2022.12.16
-Roukanken and The Gap no longer triggers Sharp Plug when dashes or teleports.
-楼观剑和隙间不再会在冲刺或使用时触发锋利插头。
-Deja vu no longer spawns corpses in netstart coop.
-似曾相识不再会在网络联机中生成尸体。
-Updated Deja vu's encode function, make it can spawn mod items correctly.
-更新了似曾相识的编码方法，使得在开关MOD之后出现的道具结果依然正常。
-Fixed an issue that Pill of Ultramarine Orb will not be consumed correctly.
-修复了绀珠药丸不会正常消耗的BUG。
-Fixed an issue that weapons like bone club can open locked chest.
-修复了可以直接使用骨棒等武器打开上锁箱子的BUG。

12.4.4-2022.12.17
-Deja vu now will spawns some random corpses.
-似曾相识现在会自动生成一些随机生成的尸体。
-Fixed an issue that soul magatama does not works on players without heart containers.
-修复了灵魂勾玉对无血上限的角色不起效果的BUG。

12.4.5-2022.12.18
-Fixed an issue that Deja vu will not convert old data into newer data.
-修复了似曾相识不会将老数据转为新数据的问题。

12.4.7-2022.12.18
-CuerLib 1.3.1 Support.
-适配CuerLib 1.3.1。
-Fixed an issue that Rune Sword's data will be missing after continue a run.
-修复符文剑小退之后数据丢失的问题。