@@ -505,7 +505,7 @@
 * 具有3个妖精尘后飞行。
 * 击杀敌人后有几率掉落额外的妖精尘道具。
     * 几率为（运气）%，最低1%，最高10%。
-    * 所有角色都有3个仙灵尘时不再掉落。
+    * 所有角色都有3个妖精尘时不再掉落。
 
 虹龙徽章 Rainbow Dragon Badge
 描述：打败他们！ Fight 'em!
