@@ -2565,3 +2565,8 @@ Greed Shop: Added D Flip
 -适配CuerLib 1.3.1。
 -Fixed an issue that Rune Sword's data will be missing after continue a run.
 -修复符文剑小退之后数据丢失的问题。
+
+-Dagger of Servants now no longer triggers Holy Mantle.
+-从者之刃现在不再触发神圣屏障。
+-Dagger of Servants now will triggers very 4 rooms correctly, instead of 4 rooms at first, then 3 rooms.
+-从者之刃现在会正确的每4个房间触发一次，而不是第一次4个房间，之后3个房间。
